<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>brad.grier.alhena</groupId>
    <artifactId>Alhena</artifactId>
    <version>1.5-SNAPSHOT</version>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.release>21</maven.compiler.release>
        <exec.mainClass>brad.grier.alhena.Alhena</exec.mainClass>
        <vertx.version>4.5.28</vertx.version>  
    </properties>
    <dependencies>
        <dependency>
            <groupId>io.vertx</groupId>
            <artifactId>vertx-core</artifactId>
            <version>${vertx.version}</version>
        </dependency>
        <dependency>
            <groupId>org.jsoup</groupId>
            <artifactId>jsoup</artifactId>
            <version>1.21.2</version>
        </dependency>    
        <dependency>
            <groupId>org.bouncycastle</groupId>
            <artifactId>bcprov-jdk18on</artifactId>
            <version>1.84</version>
        </dependency>    
        <dependency>
            <groupId>org.bouncycastle</groupId>
            <artifactId>bcpkix-jdk18on</artifactId>
            <version>1.84</version>
        </dependency>   
        <dependency>
            <groupId>org.commonmark</groupId>
            <artifactId>commonmark</artifactId>
            <version>0.24.0</version>
        </dependency>
        <dependency>
            <groupId>me.saharnooby</groupId>
            <artifactId>qoi-java</artifactId>
            <version>1.2.1</version>
        </dependency>
        <dependency>
            <groupId>me.saharnooby</groupId>
            <artifactId>qoi-java-awt</artifactId>
            <version>1.2.1</version>
        </dependency>
        <!-- include the following for native-image only -->   
        <!---
        <dependency>
            <groupId>org.bouncycastle</groupId>
            <artifactId>bctls-jdk18on</artifactId>
            <version>1.80</version>
        </dependency>   

        <dependency>
            <groupId>org.graalvm.sdk</groupId>
            <artifactId>nativeImage</artifactId>
            <version>25.0.1</version>
            <scope>provided</scope>
        </dependency>
        -->
        <dependency>
            <groupId>com.formdev</groupId>
            <artifactId>flatlaf</artifactId>
            <version>3.7.1</version>
        </dependency>   
        <dependency>
            <groupId>com.formdev</groupId>
            <artifactId>flatlaf-intellij-themes</artifactId>
            <version>3.7.1</version>
        </dependency>       
        <!-- to get the fat jar to work on the arm mac-->
        <!-- The resulting three jars from the following two dependencies can be deleted from non-mac builds -->
        
        <dependency>
            <groupId>io.netty</groupId>
            <artifactId>netty-resolver-dns-native-macos</artifactId>
            <version>4.1.135.Final</version>
            <classifier>osx-aarch_64</classifier>
        </dependency>  
        <dependency>
            <groupId>io.netty</groupId>
            <artifactId>netty-resolver-dns-native-macos</artifactId>
            <version>4.1.135.Final</version>
            <classifier>osx-x86_64</classifier>
        </dependency>  
    
        <dependency>
            <groupId>com.h2database</groupId>
            <artifactId>h2</artifactId>
            <version>2.4.240</version>
        </dependency>  
        <dependency>
            <groupId>com.techsenger.ansi4j</groupId>
            <artifactId>ansi4j-core-impl</artifactId>
            <version>2.0.0</version>
        </dependency>
        <dependency>
            <groupId>org.drjekyll</groupId>
            <artifactId>fontchooser</artifactId>
            <version>3.1.0</version>
        </dependency>
        <dependency>
            <groupId>org.drjekyll</groupId>
            <artifactId>colorpicker</artifactId>
            <version>2.0.1</version>
        </dependency>
        <dependency>
            <groupId>net.fellbaum</groupId>
            <artifactId>jemoji</artifactId>
            <version>1.7.6</version>
        </dependency>
        <dependency>
            <groupId>uk.co.caprica</groupId>
            <artifactId>vlcj</artifactId>
            <version>4.10.0</version>
        </dependency>
        <dependency>
            <groupId>com.twelvemonkeys.imageio</groupId>
            <artifactId>imageio-webp</artifactId>
            <version>3.13.1</version>
        </dependency>
        <dependency>
            <groupId>de.vandermeer</groupId>
            <artifactId>asciitable</artifactId>
            <version>0.3.2</version>
        </dependency>
        <dependency>
            <groupId>com.fifesoft</groupId>
            <artifactId>rsyntaxtextarea</artifactId>
            <version>3.6.0</version>
        </dependency>
        <dependency>
            <groupId>com.github.weisj</groupId>
            <artifactId>jsvg</artifactId>
            <version>2.0.0</version>
        </dependency>
    </dependencies>    
    
    <build>
        <finalName>alhena</finalName>
        <plugins>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <release>21</release>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.3.0</version>
                <configuration>
                    <archive>
                        <manifest>
                            <mainClass>brad.grier.alhena.Alhena</mainClass>
                            
                            <addClasspath>true</addClasspath>
                            <classpathPrefix>.</classpathPrefix>
                            <!--
                            <classpathPrefix>lib/</classpathPrefix>  
                            -->                          
                        </manifest>
                    </archive>
                </configuration>
            </plugin>


            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <version>3.5.0</version>
                <executions>
                    <execution>
                        <id>copy-dependencies</id>
                        <phase>package</phase>
                        <goals>
                            <goal>copy-dependencies</goal>
                        </goals>
                        <configuration>
                            <outputDirectory>${project.build.directory}/lib</outputDirectory>
                            <includeScope>runtime</includeScope>
                        </configuration>
                    </execution>
                    <execution>
                        <id>copy-main-jar</id>
                        <phase>package</phase>
                        <goals>
                            <goal>copy</goal>
                        </goals>
                        <configuration>
                            <artifactItems>
                                <artifactItem>
                                    <groupId>${project.groupId}</groupId>
                                    <artifactId>${project.artifactId}</artifactId>
                                    <version>${project.version}</version>
                                    <outputDirectory>${project.build.directory}/lib</outputDirectory>
                                    <destFileName>alhena.jar</destFileName>
                                </artifactItem>
                            </artifactItems>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>    
</project>